solter responsib(carrito compra css)

--- a/css/barraDesplegable.css
+++ b/css/barraDesplegable.css
@@ -1,6 +1,56 @@
+.Items__Menu{
+    display: flex;
+    margin: 1em ;
+}
+
+.Texto__Desplegable{
+        
+    display: block;
+    padding: 0.3em 2em 0.5em 2em;
+    text-decoration: none;
+    color: rgb(112, 104, 109);
+    list-style: none;
+    text-shadow: -1px 0px 2px rgb(195, 195, 196);
+    font-size: 1.1em;
+    font-style: Raleway;
+    margin-left: -.8em;
+ 
+} 
+.Desplegado{
+    font-size: .9em;
+    color: rgb(77, 76, 76);
+    margin-top: 0.4em;
+    border-bottom: 1px solid rgb(247, 140, 64);
+    
+}
+
+.Items__Menu .Texto__Desplegable{
+    padding-left: 2em;
+}
+
+.Items__Menu{
+    position: relative;
+    margin-top: 1.9em;
+    margin-left: 11em;
+}
+
+.Submenu__Productos{   
+    background: rgb(245, 186, 144);
+    height: 0;
+    overflow: hidden;
+    transition: all 0.3s; 
+    margin: 0 -1.2em 0 -1.7em;
+    
+}
+.Productos__Menu{
+   /* padding: .3em; */
+}
 
 
-   
+
+        /* RESPONSIVE */
+
+   @media  (max-width:420px){
 
 
 .Items__Menu{ 
@@ -8,12 +58,12 @@
         padding: 0;
         padding-top: 1em;
         margin: 0;
-        width: 25%;
+        width: 47%;
         height: 500px;
         margin-left: -100%;
         transition: all .5s;
-        background: linear-gradient( rgb(192, 239, 255),rgb(182, 196, 213),rgba(125, 138, 154, 0.726))
-        
+        background: linear-gradient( rgb(237, 239, 240),rgb(232, 234, 236),rgb(206, 208, 210));
+        margin-top: 4.3em;
         
     }
     .Texto__Desplegable{
@@ -21,11 +71,13 @@
         display: block;
         padding: 0.7em;
         text-decoration: none;
-        color: rgb(16, 54, 95);
+        color: rgb(59, 49, 55);
         list-style: none;
-        text-shadow: -1px 0px 2px rgb(146, 146, 160);
-        font-size: 1.3em;
+        text-shadow: -1px 0px 2px rgb(163, 163, 178);
+        font-size: .87em;
         font-style: Raleway;
+        margin-left: -.8em;
+        
     } 
 
     .Items__Menu .Texto__Desplegable{
@@ -34,58 +86,24 @@
 
     .Submenu__Productos{
        
-        margin-left: 0;
-        background: rgba(135, 166, 205, 0.717);
+        margin-right:0;
+        background:rgb(245, 186, 144);
         padding-left: 27px;
         height: 0;
         overflow: hidden;
         transition: all 0.3s;
+        margin-left: -.7em;
         
+       
     }
     
     .Mostrar{
         margin-left: 0;
         display: inline-block;
         z-index: 2;
-       
+        
         
     }
+    
 
-
-    /* .Items__Menu,.Submenu__Productos{
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
-    .Items__Menu{
-        background: linear-gradient( rgb(192, 239, 255),rgb(182, 196, 213),rgba(125, 138, 154, 0.726));
-        width: 30%;
-        margin-left: -100%;
-        transition: all .5s;
-        
-    }
-    .Texto__Desplegable{
-        display: block;
-        padding: 20px;
-        padding-left: 2em;
-        text-decoration: none;
-        color: rgb(94, 90, 51);
-        text-shadow: -1px 0px 2px rgb(11, 11, 12);
-        font-size: 1.3em;
-        font-style: Raleway;
-    } 
-    .Submenu__Productos .Texto__Desplegable{
-        
-        background: rgba(159, 139, 146, 0.717);
-        padding-left:3em;
-        
-    }
-    .Submenu__Productos{
-        height: 0;
-        overflow: hidden;
-        transition: all 0.3s;
-    }
-
-    .Mostrar{
-        margin-left: 0;
-    } */
+}
