--- a/css/catalogoProducto.css
+++ b/css/catalogoProducto.css
@@ -6,24 +6,18 @@ main{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
-
-  
-   /* display: flex;
-   flex-wrap: wrap;
-   margin-left: 2.3em;
-    */
-   
 }
 
 .grilla__Procuto{
 
 display: inline-block;
- margin: 15px 8px 15px 2em; 
+ margin:4em 8px 15px 2em; 
  width:250px; 
 height: 450px;
 border: solid 1px black;
 background: rgb(254, 253, 251);
 border-radius: 20px;
+box-shadow: 3px 3px 8px rgba(112, 1, 1, 0.56);
 
 
 }
@@ -35,8 +29,7 @@ border-radius: 20px;
     height: 55%;
     width: 90%;
     background-size: cover;
-    /* border: solid 2px black;
-    background: rgb(156, 233, 252); */
+  
 }
 
 .grilla__precio{
@@ -70,12 +63,31 @@ border-radius: 20px;
     font-family: Ubuntu;
 }
 .grilla__btnComprar{
-    
-    margin-top: 13px;
-    margin-left: 50%;
+  width: 10em;
+  height: 2.3em;  
+  margin-top: 13px;
+  margin-left: 50%;
   transform: translateX(-50%);
-  background: skyblue;
+  background: rgb(238, 93, 48);
   font-weight: bold;
-
-  
+  border-radius: 10px;
+  box-shadow: 3px 3px 8px rgba(112, 1, 1, 0.56);
+  border: 1.3px solid red;
+  color: aliceblue;
 }
+
+
+
+@media  (max-width:420px){
+
+
+    .grilla__Procuto{
+
+        display:block;
+     
+        margin: .5em auto 2em auto;
+    }
+
+
+}
+
