--- a/css/sliderAutomatico.css
+++ b/css/sliderAutomatico.css
@@ -2,7 +2,7 @@
   
   
   width:100%;
-  height: 400px;
+  height: 450px;
   margin: 10px 0px;
   
 
@@ -35,10 +35,17 @@
 
 .img{
     width: 100%;
-    height: 400px;
+    height: 450px;
     background-size: cover;
     margin: 0;
     padding: 0;
     background-position: 50%;
 }
 
+@media (max-width: 420px) {
+
+    .contenedor__Silder{
+        display: none;
+    }
+    
+}
