--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,28 @@
 body {
    
     width: 100%;
-    background-image: url(./img/imagenes/fondoSolter.jpg) ;
-    background-repeat: no-repeat;
-    background-size: cover;
     position:absolute;
+    
+    background: rgb(239, 239, 239);
+    
+    
+}
+
+.Encabezado__Menu{
+    background: rgb(250, 63, 63);
+}
+
+
+.Texto__Encabezado{
+    display: flex;
+    justify-content: center;
+    color:white;
+    font-family: Ubuntu;
+    font-size: 1.2em;
+    padding: .3em;
+    font-weight:  bolder;
+    letter-spacing: .1em;
+   
     
 }
 
@@ -14,13 +32,17 @@ body {
     width: 100%;
 	margin: 0 ;
     height: 4.3em;
-    background: linear-gradient(rgb(106, 125, 148), rgb(192, 239, 255));
     cursor: pointer;
-    
+    background:rgb(239, 239, 239);
+   
 }
+
+
 .Btn__Barra .Logo__Empresa .icon__Menu{
     display:inline-block ;
 }
+
+
 .icon__Menu{
     font-size: 2em;
     color: rgb(168, 161, 161);
@@ -32,33 +54,181 @@ body {
 
 
 .Logo__Solter{
-    width: 18em;
+    width: 12em;
     height: 5.8em;
     margin-top: -0.6em;
  
 }
+
+
+
 .Btn__Barra{
     display: flex;
-    margin-right: 5em;
+    margin-right: 1.6em;
     
 }
 .Btn__icon{
     color:rgb(168, 161, 161);
-    font-size: 2em;
-    margin-left: 1em;
-    margin-top: 0.5em;
+    font-size: 1em;
+    margin:2.5em 0  0 1em ;
+   
    text-shadow: 2px 2px 3px black;
 }
 .Btn__Menu{
     display:flex;
     margin-left: 0.4em;
 }
-.Titulo__Menu{
-   
-    font-family:Ubuntu;
-    font-size:0.8em ;
+
+.icon__Menu{
+    display:none
+}
+
+.Separador__menu{
+
+    border-bottom: 1.5px solid rgb(255, 123, 0);
     
 }
 
+.Enlace__Productos{
 
+    padding: 1em;
+}
+
+.Contenedor__Enlace{
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 4em 2.5em 4em 2.5em;
+    justify-items: center;
+   
+   
+}
+
+.Caja__Enlase{
+
+    width: 17em;
+    height: 22em;
+    border:1px solid black;
+    border-radius: 18px;
+    box-shadow: 3px 3px 8px orange;
+   
+}
+
+.EnlaceAireAcondicionado{
+
+    background-image: url("./img/imagenes/aireAcondicionado.jpg") ;
+    background-size: cover;
+    background-position:center;
+}
+
+
+.EnlaceEquipoCentrales{
+    
+    background-image: url("./img/imagenes/aireCentral.jpg") ;
+    background-size: cover;
+    background-position:left;
+}
+
+.EnlaceRepuestos{
+    background-image: url("./img/imagenes/Repuestos.jpeg") ;
+    background-size: cover;
+    background-position:center;
+
+}
+
+
+
+.Texto__Nombre-Enlace{
+    display: flex;
+    font-family: Ubuntu;
+    font-size: 1.6em;
+    color:rgb(252, 12, 12);
+    text-shadow: 2px 1.1px 1px rgb(172, 170, 170);
+    font-weight:  900;
+    justify-content: center;
+    margin-top: 11em;
+}
+
+
+               /* RESPONSIVE */
+
+@media  (max-width:420px){
+
+
+    .Menu__Container{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        margin: 0 ;
+        height: 4.3em;
+        cursor: pointer;     
+    }
+
+
+    .icon__Menu{
+        display: flex;
+        font-size: 1.6em;
+        color: rgb(168, 161, 161);
+        margin-left: .7em;
+        margin-top: 0.3em;
+        text-shadow: 2px 2px 2px black;  
+    }
+
+   
+
+    .Btn__Menu{
+        display: flex;
+    }
+
+    
+    .Btn__icon{
+        color:rgb(168, 161, 161);
+        font-size: 2em;
+        margin-left: 1em;
+        margin-top: 0.5em;
+       text-shadow: 2px 2px 3px black;
+    }
+  
+    
+    .Logo__Solter{
+        width: 9em;
+        height: 3em;
+        margin-left: 1.7em;  
+    }
+
+
+    .Btn__icon{
+        color:rgb(168, 161, 161);
+        font-size: 1.3em;
+        margin-left: .5em;
+       text-shadow: 2px 2px 3px black;
+    }
+
+
+    .Btn__Barra{
+        display: flex;
+        margin-right: 1.1em;    
+    }
+
+    
+    .Logo__Empresa{
+        margin: auto;
+    }
+
+    /* .Separador__menu{
+
+        border-bottom: none;
+        
+    } */
+   
+    .Contenedor__Enlace{
+        display: block;
+        margin-top: -0.7em;
+    }
+    .Caja__Enlase{
+        margin-bottom: 3em;
+        margin-top: 1em;
+    }
+
+} 
 
